--- a/other/test.html
+++ b/other/test.html
@@ -7,6 +7,23 @@
     <title>TEST USE</title>
 </head>
 <body>
-    <script></script>
+    <script>
+        var fibonacci = (position) => {
+            if (position <= 1) {
+                console.log(position);
+                return position;
+            } else {
+                let start = 0;
+                let res = 1;
+                for(let i = 2; i <= position; i++) {
+                    res = start + res;
+                    start = res - start;
+                }
+                console.log(res);
+                return res;
+            }
+        }
+        fibonacci(10);
+    </script>
 </body>
 </html>
