--- a/other/test.html
+++ b/other/test.html
@@ -8,22 +8,27 @@
 </head>
 <body>
     <script>
-        var fibonacci = (position) => {
-            if (position <= 1) {
-                console.log(position);
-                return position;
-            } else {
-                let start = 0;
-                let res = 1;
-                for(let i = 2; i <= position; i++) {
-                    res = start + res;
-                    start = res - start;
-                }
-                console.log(res);
-                return res;
+        var getPagination = (offset, limit, total) => {
+            if (offset > total) {
+                console.log("false number")
+                return false;
             }
+            const res = {
+                currentPage: 1, 
+                totalPage: 1, 
+                renderPages: []
+            }
+            let pagesArr = [0, 1, 2, 3, 4];
+            res.totalPage = Math.trunc(total/limit) + 1;
+            res.currentPage = Math.trunc(offset/limit) + 1;
+
+            let addPage = res.currentPage - 2;
+            let overPage = addPage + 4 > res.totalPage? addPage + 4 - res.totalPage: 0;
+            res.renderPages = pagesArr.map(page => page + addPage - overPage);
+            console.log(res)
+            return res
         }
-        fibonacci(10);
+        getPagination(33, 5, 33)
     </script>
 </body>
 </html>
