fixed the pagination will < 1

--- a/other/test.html
+++ b/other/test.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         var getPagination = (offset, limit, total) => {
-            if (offset > total) {
+            if (offset >= total || limit < 1) {
                 console.log("false number")
                 return false;
             }
@@ -23,12 +23,13 @@
             res.currentPage = Math.trunc(offset/limit) + 1;
 
             let addPage = res.currentPage - 2;
-            let overPage = addPage + 4 > res.totalPage? addPage + 4 - res.totalPage: 0;
-            res.renderPages = pagesArr.map(page => page + addPage - overPage);
+            let overPage = addPage + 4 > res.totalPage? addPage + 4 - res.totalPage: 0; // if last page is over than max render page
+            let preOverPage = addPage < 0 ? addPage - 1 : 0; // if first page is < 0
+            res.renderPages = pagesArr.map(page => page + addPage - overPage - preOverPage);
             console.log(res)
             return res
         }
-        getPagination(33, 5, 33)
+        getPagination(6, 5, 33)
     </script>
 </body>
 </html>
